(fix): pagetile spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,7 +152,7 @@ nav a.navlink:hover {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-top: 1rem;
+    padding: 1rem 0;
 }
 
 .pagelist.grid {
